# nanollm-approach1

./: pyproject.toml
analysis/: map_litellm.py  visualize.py
analysis/output/: call_graph.json  dep_graph.html  dep_graph.json  submodules.json  summary.json
litellm/: __init__.py  exceptions.py
nanollm/: __init__.py  _config.py  _http.py  _image.py  _router.py  _types.py  exceptions.py
nanollm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nanollm/adapters/: _base.py  anthropic.py  azure_openai.py  bedrock.py  gemini.py  ollama.py  openai_compat.py  vertex.py
tests/: test_adapters.py  test_api.py  test_compat.py  test_exceptions.py  test_image.py  test_router.py  test_types.py
